--- a/instruction.css
+++ b/instruction.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(/resourse/vecteezy_triangle-neon-loop-video-background_7538946_847_AdobeExpress.gif);
+    background-image: url(/resourse/vecteezy_triangle-neon-loop-video-background_7538946_847_AdobeExpress.gif)
 }
 #level-title {
     font-family: 'Press Start 2P',cursive;
